changed terminal commands

--- a/content/0.index.md
+++ b/content/0.index.md
@@ -39,8 +39,8 @@ Write pages in [Markdown](https://content.nuxtjs.org), use [Vue](https://vuejs.o
   ::terminal
   ---
   content:
-  - npx nuxi@latest init -t themes/docus
-  - cd docs
+  - npx redeast@latest init
+  - cd progress
   - npm install
   - npm run dev
   ---
